# culina-ml

./: .gitignore  README.md
culina-jupyter-notebooks/: pyproject.toml
culina-jupyter-notebooks/notebooks/: ingredient_similarity.ipynb  interactions.ipynb  recipe_popularity.ipynb  recipe_similarity.ipynb  recipe_weighted_popularity.ipynb
culina-jupyter-notebooks/notebooks/.ipynb_checkpoints/: interactions-checkpoint.ipynb
culina-ml-dotnet/: culina-ml-dotnet.sln
culina-ml-dotnet/CollaborativeFilteringRecipeRecommendations.API/: CollaborativeFilteringRecipeRecommendations.API.csproj  CollaborativeFilteringRecipeRecommendations.consumption.cs  CollaborativeFilteringRecipeRecommendations.mbconfig  CollaborativeFilteringRecipeRecommendations.training.cs  Program.cs
culina-ml-dotnet/CollaborativeFilteringRecipeRecommendations.API/Properties/: launchSettings.json
culina-ml-dotnet/CollaborativeFilteringRecommendations/: CollaborativeFilteringRecipeRecommendations.consumption.cs  CollaborativeFilteringRecipeRecommendations.training.cs  CollaborativeFilteringRecommendations.csproj  Program.cs
culina-ml-dotnet/RecipeRecommendations/: Program.cs  RecipeRatingData.cs  RecipeRecommendations.csproj
