[tool.poetry]
name = "culina-ml"
version = "0.1.0"
description = ""
authors = ["Zackery Ayscue <ztayscue@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
